[package]
name = "random"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
clio = { version = "0.3.3", features = ["clap", "clap-parse"] }
rand = "0.8.5"
